Add page select

--- a/web/flask/template/index.html
+++ b/web/flask/template/index.html
@@ -35,6 +35,11 @@
         </form>
       </nav>
     </div>
+    <div class="row">
+      <button id="PrevPageButton" type="button" class="btn btn-info">Prev</button>
+      <button id="NextPageButton" type="button" class="btn btn-info" style="margin-left: 6px">Next</button>
+      <h4 id="CurrentPageLabel" style="margin-left: 6px">Page: 0</label>
+    </div>
     <br>
   </div>
 <!-- Search Bar -->
