--- a/web/flask/template/index.html
+++ b/web/flask/template/index.html
@@ -49,10 +49,10 @@
     <div class="container border border-success">
         <div name="Item" class="container">
           <div class="row">
-            <h3 name="CatalogName">CatalogName</h3>
+            <h3><a href="javascript:void(0);" name="CatalogName">CatalogName</a></h3>
           </div>
           <div class="row">
-            <a href="javascript:void(0);" name="TableMembers" style="padding-right: 8px">Tables</a>
+            <a href="javascript:void(0);" name="TableMembers" style="margin-right: 8px">Tables</a>
           </div>
           <div class="row">
             <h6 name="Description">Description</h6>
