Prepare for catalog page

--- a/web/flask/template/catalog.html
+++ b/web/flask/template/catalog.html
@@ -8,11 +8,9 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-  <script src='{{ url_for('static', filename="js/mainpage.js") }}' charset="UTF-8"></script>
-
+  <script src='{{ url_for('static', filename="js/catalogpage.js") }}' charset="UTF-8"></script>
   <script>
-    /* These variables can be seen by js */
-    flask_config = {{flask_config | tojson}}
+    const catalogId = {{catalogId}};
   </script>
 
   <style>
@@ -25,6 +23,6 @@
 </head>
 
 <body>
-    <h1>Catalog</h1>
+    <h1 id="CatalogName">Catalog</h1>
 </body>
 </html>
