--- a/web/flask/template/index.html
+++ b/web/flask/template/index.html
@@ -27,6 +27,9 @@
 <body>
 <!-- Search Bar -->
   <div class="container">
+    <div class="row justify-content-end">
+      <button id="Logout" type="button" class="btn btn-danger">Logout</button>
+    </div>
     <div class="row">
       <nav class="navbar navbar-light bg-light">
         <form class="form-inline">
