Complete serving option on data_integration page

--- a/web/flask/template/data_integration.html
+++ b/web/flask/template/data_integration.html
@@ -128,6 +128,10 @@
   <hr>
   <br>
 
+  <label>Serve as</label>
+  <textarea class="form-control" id="ServeAsName" rows="3"></textarea>
+  <br>
+
   <div class="row">
     <button onclick="sendTaskRequest()" class="btn btn-success w-100">Send Request</button>
   </div>
