--- a/web/flask/template/catalog.html
+++ b/web/flask/template/catalog.html
@@ -23,6 +23,32 @@
 </head>
 
 <body>
-    <h1 id="CatalogName">Catalog</h1>
+  <div class="card container">
+    <div class="card-body">
+      <h4 class="card-title" id="CatalogName"></h4>
+      <p class="card-text" id="CatalogDescription"></p>
+      <h5 class="card-subtitle">CatalogKeywords:</h5>
+      <h6 class="mb-2 text-muted" id="CatalogKeywords"></h6>
+    </div>
+  </div>
+
+  <br>
+
+  <div class="container">
+    <div class="container" id="CatalogTables">
+      <template id="TableTemplate">
+        <div class="card row">
+          <div class="card-body">
+            <input class="form-check-input" type="checkbox" value="">
+            <h4 class="card-title" name="TableName">hi</h4>
+          </div>
+        </div>
+      </template>
+    </div>
+    <div class="container">
+      <button type="button" class="btn btn-success w-100" id="IntegrateButton">Integrate</button>
+    </div>
+  </div>
+
 </body>
 </html>
