--- a/web/flask/template/management.html
+++ b/web/flask/template/management.html
@@ -25,13 +25,26 @@
     <div class="row">
       <input type="text" placeholder="Search for Catalog" class="form-control" id="CatalogSearchText"></input>
     </div>
-    <div class="row">
-      <button type="button" class="btn btn-success w-100" id="CatalogSearchButton">Search</button>
-    </div>
     <br>
     <div class="row">
       <select class="form-select w-100" id="CatalogSelect">
       </select>
+    </div>
+  </div>
+
+  <br><br>
+
+  <div class="container">
+    <div class="row">
+      <input type="text" placeholder="Search for Table" class="form-control" id="TableSearchText"></input>
+    </div>
+    <br>
+    <div class="row">
+      <select class="form-select w-100" id="TableSelect">
+      </select>
+    </div>
+    <div class="row">
+      <button type="button" class="btn btn-success w-100" id="TableAddButton">Add to Catalog</button>
     </div>
   </div>
 
