--- a/web/flask/template/data_integration.html
+++ b/web/flask/template/data_integration.html
@@ -34,7 +34,7 @@
     {% for elem_id in range(2) %}
     <div class="col">
       <form>
-        <label>Database</label>
+        <label>DBMS</label>
         <select disabled class="form-select w-100">
           <option>{{tableInfos[elem_id]['DBMS']}}</option>
         </select>
