Adapted to Docker Compose v3. And adapted to its naming.
This is for using the replication function of Docker Compose v3.
* Remove originally binded hostname & container_name & container_ip
* Container name is now "datafabric_{service}_{ordinal}"

--- a/web/flask/template/metadata_scanner.html
+++ b/web/flask/template/metadata_scanner.html
@@ -35,7 +35,7 @@
         <br><br>
         <div class="form-group">
           <label>Server</label>
-          <input type="text" class="form-control" value="" placeholder="e.g. datafabric-mongo:27017" id="ConnText">
+          <input type="text" class="form-control" value="" placeholder="e.g. datafabric_mongo_1:27017" id="ConnText">
         </div>
       </form>
     </div>
@@ -60,7 +60,7 @@
       <template id="TableRowTemplate">
         <tr>
           <td>MyTable1</td>
-          <td>datafabric-mysql:3306</td>
+          <td>datafabric_mysql_1:3306</td>
           <td>MySQL</td>
           <td>testdata</td>
           <td>...</td>
