--- a/web/flask/template/management.html
+++ b/web/flask/template/management.html
@@ -66,7 +66,7 @@
         <tr>
           <th scope="row">1</th>
           <td>MyTable1</td>
-          <td>datafabric-mysql:3306</td>
+          <td>datafabric_mysql_1:3306</td>
           <td>MySQL</td>
           <td>testdata</td>
           <td><button type="button" class="btn btn-danger">Remove</button></td>
